Fixing bold headings on IE

--- a/source/app/NOS.Wiki/Themes/NOS/1-reset.css
+++ b/source/app/NOS.Wiki/Themes/NOS/1-reset.css
@@ -2,7 +2,7 @@
 	margin: 0;
 	padding: 0;
 	border: 0;
-	font-weight: inherit;
+	font-weight: normal;
 	font-style: inherit;
 	font-size: 100%;
 	font-family: inherit;
